--- a/index.html
+++ b/index.html
@@ -6,16 +6,43 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header class="nav">
-            <img src="./imagenes/logo-tp.png" alt="Logo ADA">
-            <a>Home</a>
-            <a>About Us</a>
-            <a>Services</a>
-            <a>Portfolio</a>
-            <a>Team</a>
-            <a>Dropdown</a>
-            <a>Contact Us</a>
+        <header class="navsuperior">
+            <div class="logo">
+                <a href="#home">
+                    <img src="./imagenes/logo-tp.png" alt="Logo ADA">
+                </a>
+            </div>
+            <ul>
+                <li>
+                    <a href="#home">Home</a>
+                </li>
+
+                <li>
+                    <a  href="#about-us">About Us</a>
+                </li>
+  
+                <li>
+                    <a  href="#services">Services</a>                  
+                </li>
+
+                <li>
+                    <a  href="#portfolio">Portfolio</a>
+                </li>
+
+                <li>
+                    <a  href="#team"> Team</a>
+                </li>
+
+                <li>
+                    <a  href="#home">Dropdown</a>                    
+                </li>
+
+                <li>
+                    <a href="contact-us">Contact Us</a>    
+                </li>
+            </ul>
         </header>
+
         <section class="seccion" id="home">
         </section>
         
