--- a/index.html
+++ b/index.html
@@ -6,41 +6,45 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header class="navsuperior">
-            <div class="logo">
-                <a href="#home">
-                    <img src="./imagenes/logo-tp.png" alt="Logo ADA">
-                </a>
+        <header id="header" class="fijotop">
+            <div class="container" >
+                <div class="logo">
+                    <a href="#home">
+                        <img src="./imagenes/logo-tp.png" alt="Logo ADA">
+                    </a>
+                </div>
+                <nav class="navbar">
+                    <ul>
+                        <li>
+                            <a href="#home">Home</a>
+                        </li>
+
+                        <li>
+                            <a  href="#about-us">About Us</a>
+                        </li>
+        
+                        <li>
+                            <a  href="#services">Services</a>                  
+                        </li>
+
+                        <li>
+                            <a  href="#portfolio">Portfolio</a>
+                        </li>
+
+                        <li>
+                            <a  href="#team"> Team</a>
+                        </li>
+
+                        <li>
+                            <a  href="#home">Dropdown</a>                    
+                        </li>
+
+                        <li>
+                            <a href="contact-us">Contact Us</a>    
+                        </li>
+                    </ul>
+                </nav>    
             </div>
-            <ul>
-                <li>
-                    <a href="#home">Home</a>
-                </li>
-
-                <li>
-                    <a  href="#about-us">About Us</a>
-                </li>
-  
-                <li>
-                    <a  href="#services">Services</a>                  
-                </li>
-
-                <li>
-                    <a  href="#portfolio">Portfolio</a>
-                </li>
-
-                <li>
-                    <a  href="#team"> Team</a>
-                </li>
-
-                <li>
-                    <a  href="#home">Dropdown</a>                    
-                </li>
-
-                <li>
-                    <a href="contact-us">Contact Us</a>    
-                </li>
-            </ul>
         </header>
 
         <section class="seccion" id="home">
