Navegacion superior casi que terminada

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <body>
         <header id="header" class="fijotop">
             <div class="container" >
-                <div class="logo">
+                <div class="logo float-left">
                     <a href="#home">
                         <img src="./imagenes/logo-tp.png" alt="Logo ADA">
                     </a>
                 </div>
-                <nav class="navbar">
+                <nav class="navbar float-right">
                     <ul>
                         <li>
                             <a href="#home">Home</a>
