Probando el dropdown kcyo

--- a/index.html
+++ b/index.html
@@ -35,8 +35,43 @@
                             <a  href="#team"> Team</a>
                         </li>
 
-                        <li>
-                            <a  href="#home">Dropdown</a>                    
+                        <li class="desplegable">
+                            <a  href="#home">Dropdown</a>
+                            <ul class="desplegable">
+                                <li>
+                                    <a href="#">
+                                        Item 1
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Item 2
+                                    </a>
+                                    <ul>
+                                        <li>
+                                            SubItem1
+                                        </li>
+                                        
+                                        <li>
+                                            SubItem2
+                                        </li>
+                                            
+                                        <li>
+                                            SubItem3
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Item 3
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Item 4
+                                    </a>
+                                </li>
+                            </ul>                    
                         </li>
 
                         <li>
