empezamos a hacer el home

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                         <img src="./imagenes/logo-tp.png" alt="Logo ADA">
                     </a>
                 </div>
+<!----------------------------MENU--------------------------------->                
                 <nav class="navbar float-right">
                     <ul>
                         <li>
@@ -82,9 +83,21 @@
             </div>
         </header>
 <!----------------------CONTENIDO----------------------------->
+<!-----------------------HOME--------------------------------->
         <section class="seccion" id="home">
+            <h1>
+            We provide
+            <span>solutions</span> 
+            for your business!
+            </h1>
+            <div class="button-get_started">
+                <button type="button">Get Started</button>
+            </div>
+            <div class="button-our_services">
+                    <button type="button">Our Services</button>
+            </div>
         </section>
-        
+<!------------------------------------------------------------->       
         <section class="seccion fondoblanco" id="about-us">
         </section>
         
