--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" type="text/css" href="./estilo.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
     <body>
         <header id="header" class="fijotop">
