Section why us ultimando detalles

--- a/index.html
+++ b/index.html
@@ -309,13 +309,16 @@
     <!----------------------WHY US ----------------------------->
 
             <section class="seccion" id="why-us">
-                <h3>Why choose us?</h3>
+                <header>    
+                    <h3>Why choose us?</h3>
+                    
+                    <p>
+                        Integer ornare condimentum nibh et placerat.
+                        Vestibulum ante ipsum primis in faucibus orci 
+                        luctus et ultrices posuere cubilia Curae;
+                    </p>
+                </header>
                 
-                <p>
-                    Integer ornare condimentum nibh et placerat.
-                    Vestibulum ante ipsum primis in faucibus orci 
-                    luctus et ultrices posuere cubilia Curae;
-                </p>
                 <div class="cards">
                     <div class="card">
                         <i class="fa fa-diamond" aria-hidden="true"></i>
