--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </button>
    
 
-        <header id="nav" class="fondoblanco flex">
-            <div class="container ">
+        <header id="nav" class="fondoblanco flex ">
+            <div class="container fondoblanco">
                 <div class="logo left">
                     <a href="#home">
                         <img src="./imagenes/logo-tp.png" class="img" alt="Logo ADA">
                     </a>
                 </div>
  
-                <nav class="navmenu-desktop float-right">
+                <nav class="navmenu-desktop right fullcentrado">
                     <ul>
                         <li>
                             <a href="#home">Home</a>
@@ -47,7 +47,7 @@
                         <li>
                             <a  href="#team"> Team</a>
                         </li>
-                        <li class="desplegable">
+                        <li>
                             <a  href="#home">
                                 Dropdown
                             </a>
