--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     </head>
     <body>
            
-        <button type="button" class="togglemenu right" >
-                <i class="fa fa-bars"></i>
-        </button>
-   
+        <input type="check"  >
+       <label class="togglemenu right">
+        <i class="fa fa-bars"></i>
+       </label>
+          
 
         <header id="nav" class="fondoblanco flex ">
             <div class="container fondoblanco">
