--- a/index.html
+++ b/index.html
@@ -48,33 +48,40 @@
                         <li>
                             <a  href="#team"> Team</a>
                         </li>
-                        <li>
+                        <li class="dropdown">
                             <a  href="#home">
-                                Dropdown
+                                Drop Down 
+                                <i class="fa fa-angle-down" aria-hidden="true"></i>
                             </a>
 
 
-                            <ul class="desplegable">
+                            <ul class=" desplegable1 dropdown-style">
                                 <li>
                                     <a href="#">
                                         Item 1
                                     </a>
                                 </li>
-                                <li>
+                                <li class="dropdown2">
                                     <a href="#">
                                         Item 2
                                     </a>
-                                    <ul>
+                                    <ul class="desplegable2 dropdown-style">
                                         <li>
-                                            SubItem1
+                                            <a>
+                                                SubItem1
+                                            </a>
                                         </li>
                                         
                                         <li>
-                                            SubItem2
+                                            <a>
+                                                SubItem2
+                                            </a>
                                         </li>
                                             
                                         <li>
-                                            SubItem3
+                                            <a>
+                                                SubItem3
+                                            </a>
                                         </li>
                                     </ul>
                                 </li>
