terminando de descifrar como hacer un hover conjunto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="estilo/all.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/a789ec0764.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header id="header" class="fijotop">
@@ -102,8 +103,23 @@
                 <h1>Team</h1>
                 <h2>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</h2>
             </header>
-            <section>
+            <section class="card01">
+                <div class="fondoazul"></div>
+                <div class="text">
+                    <div class="t01">
+                        <h1>Ben Affleck</h1>
+                        <h2>Chief Executive Officer</h2>
+                    </div>
+                    <div class="tredes">
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-google-plus-g"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                </div>
+            
                 
+
 
             </section>
 
