--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="estilo/all.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a789ec0764.js" crossorigin="anonymous"></script>
     </head>
@@ -106,10 +106,8 @@
             <section class="card01">
                 <div class="fondoazul"></div>
                 <div class="text">
-                    <div class="t01">
                         <h1>Ben Affleck</h1>
                         <h2>Chief Executive Officer</h2>
-                    </div>
                     <div class="tredes">
                         <i class="fab fa-twitter"></i>
                         <i class="fab fa-facebook-f"></i>
@@ -117,10 +115,6 @@
                         <i class="fab fa-linkedin-in"></i>
                     </div>
                 </div>
-            
-                
-
-
             </section>
 
 
