arreglando cosas para comenzar

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./estilo.css">
+        <link rel="stylesheet" type="text/css" href="estilo/all.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -99,10 +99,20 @@
 
         <section class="seccion fondoblanco" id="team">
         </section>
-        
+<!---------------------OUR-CLIENTS------------------------------------------------------------------------>        
         <section class="seccion fondoceleste" id="our-clients">
+
+            <header>
+                <h1>Our Clients</h1>
+                <h2>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque dere santome nida.</h2>
+            </header>
+
+            <section>
+                    <img src="imagenes/clients/client-1.png" alt="cliente">
+            </section>
+
         </section>
-        
+<!---------------------------------------------------------------------------------------------------------->        
         <section class="seccion fondoblanco" id="contact-us">
         </section>
 <!----------------------------FOOTER----------------------------->        
