terminada la version mobile

--- a/index.html
+++ b/index.html
@@ -111,6 +111,26 @@
                     <img src="imagenes/clients/client-1.png" alt="cliente">
             </section>
 
+            <section class="clientes">
+                    <img src="imagenes/clients/client-2.png" alt="cliente">
+            </section>
+
+            <section class="clientes">
+                    <img src="imagenes/clients/client-3.png" alt="cliente">
+            </section>
+
+            <section class="clientes">
+                    <img src="imagenes/clients/client-4.png" alt="cliente">
+            </section>
+
+            <section class="clientes">
+                    <img src="imagenes/clients/client-5.png" alt="cliente">
+            </section>
+
+            <section class="clientes">
+                    <img src="imagenes/clients/client-6.png" alt="cliente">
+            </section>
+
         </section>
 <!---------------------------------------------------------------------------------------------------------->        
         <section class="seccion fondoblanco" id="contact-us">
