me faltaban agregar dos marcas, ahora si, version mobile lista

--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
                     <img src="imagenes/clients/client-6.png" alt="cliente">
             </section>
 
+            <section class="clientes">
+                    <img src="imagenes/clients/client-7.png" alt="cliente">
+            </section>
+
+            <section class="clientes">
+                    <img src="imagenes/clients/client-8.png" alt="cliente">
+            </section>
+
         </section>
 <!---------------------------------------------------------------------------------------------------------->        
         <section class="seccion fondoblanco" id="contact-us">
