--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./estilo.css">
+        <link rel="stylesheet" type="text/css" href="estilo/all.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
     </head>
     <body>
         <header id="header" class="fijotop">
@@ -104,6 +105,45 @@
         </section>
         
         <section class="seccion fondoblanco" id="contact-us">
+
+            <header>
+                Contact Us
+            </header>
+
+                <div class="mapa">
+                    <iframe  src="https://maps.google.com/maps?width=100%&height=600&hl=es&q=A108%20Adam%20Street%2C%20NY%20535022+()&ie=UTF8&t=&z=13&iwloc=B&output=embed"  scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                </div>
+
+            <section class="datos">
+
+                <div>
+                    <span class="iconify" data-icon="ion:location-outline" data-inline="false"></span>
+                    <h1>A108 Adam Street, NY 535022</h1>
+                </div>
+
+                <div>
+                    <span class="iconify" data-icon="ion:mail-outline" data-inline="false"></span>
+                    <h1>info@example.com</h1>
+                </div>
+
+                <div>
+                    <span class="iconify" data-icon="ion:call-outline" data-inline="false"></span>
+                    <h1>+1 5589 55488 55</h1>
+                </div>
+
+                <form>
+                    <input type="text" name="firstname" placeholder="Nombre">
+                    <input type="email" name="firstname" placeholder="Tu Email">
+                    <input type="text" name="firstname" placeholder="Sujeto">
+                    <textarea rows="7" cols="40">Mensaje</textarea>
+
+                    <button>Enviar Mensaje</button>
+
+
+                </form>
+
+            </section>
+
         </section>
 <!----------------------------FOOTER----------------------------->        
 
