salieron los mixins yey!

--- a/index.html
+++ b/index.html
@@ -86,12 +86,16 @@
 <!-----------------------HOME--------------------------------->
 <section class="seccion" id="home">
     <img src="imagenes/intro-img.svg" alt="home">
-    <h1 class="s02-1">We provide <div class="solutions"> solutions </div> for your business!<h1>
-    <div class="button-get-started">
-        <button type="button">Get Started</button>
-    </div>
-    <div class="button-our-services">
+    <div class="textoybotones">
+        <h1 class="s02-1">We provide <div class="solutions"> solutions </div> for your business!<h1>
+        <div class="botones">
+            <div class="button-get-started">
+            <button type="button">Get Started</button>
+            </div>
+            <div class="button-our-services">
             <button type="button">Our Services</button>
+            </div>
+        </div>
     </div>
 </section>
 <!------------------------------------------------------------->       
