--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        </label>
         
        <input type="checkbox"  id="closemenu">
-        <label for="closemenu" class="closemenuIcon">
+        <label for="openmenu" class="closemenuIcon">
             <i class="fa fa-times"></i>
         </label>
         
