terminando version desktop de team

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
+        <link rel="stylesheet" type="text/css" href="estilo/all.css">
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/v4-shims.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./imagenes/favicon.png" rel="icon">
 
@@ -199,20 +200,20 @@
 
 <!-----------------------HOME--------------------------------->
 <section class="seccion" id="home">
-    <div class="container">
-        <img src="imagenes/intro-img.svg" alt="home">
-        <div class="textoybotones">
-            <h1 class="s02-1">We provide <div class="solutions"> solutions </div> for your business!<h1>
-            <div class="botones">
-                <div class="button-get-started">
-                <button type="button">Get Started</button>
-                </div>
-                <div class="button-our-services">
-                <button type="button">Our Services</button>
-                </div>
+    
+    <img src="imagenes/intro-img.svg" alt="home">
+    <div class="textoybotones">
+        <h1 class="s02-1">We provide <div class="solutions"> solutions </div> for your business!<h1>
+        <div class="botones">
+            <div class="button-get-started">
+            <button type="button">Get Started</button>
+            </div>
+            <div class="button-our-services">
+            <button type="button">Our Services</button>
             </div>
         </div>
     </div>
+    
 </section>
     <!----------------------FIN HOME----------------------------->
     <!----------------------ABOUT US----------------------------->
@@ -747,71 +748,74 @@
                 </div>
             </section>
   <!---------------------- FIN TESTIMONIALS ----------------------------->                        
-
+<!-----------------------TEAM-------------------------------->
         <section class="seccion fondoblanco" id="team">
             <header>
                 <h1>Team</h1>
                 <h2>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</h2>
             </header>
+            <section class="cards">
 
-            <section class="card01">
-                <div class="fondoazul"></div>
-                <div class="text">
-                        <h1>Ben Affleck</h1>
-                        <h2>Chief Executive Officer</h2>
-                    <div class="tredes">
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-google-plus-g"></i>
-                        <i class="fab fa-linkedin-in"></i>
+                <section class="card01">
+                    <div class="fondoazul"></div>
+                    <div class="text">
+                            <h1>Ben Affleck</h1>
+                            <h2>Chief Executive Officer</h2>
+                        <div class="tredes">
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-google-plus-g"></i>
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
 
-            <section class="card02">
-                <div class="fondoazul"></div>
-                <div class="text">
-                        <h1>Christian Bale</h1>
-                        <h2>Product Manager</h2>
-                    <div class="tredes">
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-google-plus-g"></i>
-                        <i class="fab fa-linkedin-in"></i>
+                <section class="card02">
+                    <div class="fondoazul"></div>
+                    <div class="text">
+                            <h1>Christian Bale</h1>
+                            <h2>Product Manager</h2>
+                        <div class="tredes">
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-google-plus-g"></i>
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
 
-            <section class="card03">
-                <div class="fondoazul"></div>
-                <div class="text">
-                        <h1>Michael Keaton</h1>
-                        <h2>CTO</h2>
-                    <div class="tredes">
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-google-plus-g"></i>
-                        <i class="fab fa-linkedin-in"></i>
+                <section class="card03">
+                    <div class="fondoazul"></div>
+                    <div class="text">
+                            <h1>Michael Keaton</h1>
+                            <h2>CTO</h2>
+                        <div class="tredes">
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-google-plus-g"></i>
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
 
-            <section class="card04">
-                <div class="fondoazul"></div>
-                <div class="text">
-                        <h1>Adam West</h1>
-                        <h2>Accountant</h2>
-                    <div class="tredes">
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-google-plus-g"></i>
-                        <i class="fab fa-linkedin-in"></i>
+                <section class="card04">
+                    <div class="fondoazul"></div>
+                    <div class="text">
+                            <h1>Adam West</h1>
+                            <h2>Accountant</h2>
+                        <div class="tredes">
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-google-plus-g"></i>
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
                     </div>
-                </div>
+                </section>
+
             </section>
 
 
-            </section>
+        </section>
                 <!----------------------------OUR CKIENTS----------------------------->        
 
             <section class="seccion fondoceleste" id="our-clients">
