--- a/index.html
+++ b/index.html
@@ -834,66 +834,36 @@
   <!---------------------- FIN TESTIMONIALS ----------------------------->                        
 <!-----------------------TEAM-------------------------------->
         <section class="seccion fondoblanco" id="team">
+
+
             <header>
                 <h1>Team</h1>
                 <h2>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</h2>
             </header>
+
+
             <section class="cards">
 
-                <section class="card01">
-                    <div class="fondoazul"></div>
-                    <div class="text">
+                <section class="card">
+
+                    <div class="persona">
+                        <img src="imagenes/team-01.jpg" alt="team1">
+                    </div>
+
+                    <div class="hoverazul"></div>
+
+                    <div class="nombre">
                             <h1>Ben Affleck</h1>
                             <h2>Chief Executive Officer</h2>
-                        <div class="tredes">
+                        <div class="iconos">
                             <i class="fab fa-twitter"></i>
                             <i class="fab fa-facebook-f"></i>
                             <i class="fab fa-google-plus-g"></i>
                             <i class="fab fa-linkedin-in"></i>
                         </div>
-                    </div>
-                </section>
 
-                <section class="card02">
-                    <div class="fondoazul"></div>
-                    <div class="text">
-                            <h1>Christian Bale</h1>
-                            <h2>Product Manager</h2>
-                        <div class="tredes">
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-google-plus-g"></i>
-                            <i class="fab fa-linkedin-in"></i>
-                        </div>
                     </div>
-                </section>
 
-                <section class="card03">
-                    <div class="fondoazul"></div>
-                    <div class="text">
-                            <h1>Michael Keaton</h1>
-                            <h2>CTO</h2>
-                        <div class="tredes">
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-google-plus-g"></i>
-                            <i class="fab fa-linkedin-in"></i>
-                        </div>
-                    </div>
-                </section>
-
-                <section class="card04">
-                    <div class="fondoazul"></div>
-                    <div class="text">
-                            <h1>Adam West</h1>
-                            <h2>Accountant</h2>
-                        <div class="tredes">
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-google-plus-g"></i>
-                            <i class="fab fa-linkedin-in"></i>
-                        </div>
-                    </div>
                 </section>
 
             </section>
