--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
                     <div class="footerbot text-center ">
                         <span>© Copyright <strong>Wayne Enterprises.</strong>
                             <br> All Rights Reserved.</span> 
-                           <br> <span> Designed by ...</span> 
+                           <br> <span> Designed by Lu y Pau :D</span> 
                     </div>
                 </div>
             </footer>
