arregle el link del menu hacia una seccion

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </li>
 
                         <li>
-                            <a href="contact-us">Contact Us</a>    
+                            <a href="#contact-us">Contact Us</a>    
                         </li>
                     </ul>
                 </nav>    
@@ -194,7 +194,7 @@
         </li>
 
         <li>
-            <a href="contact-us">Contact Us</a>    
+            <a href="#contact-us">Contact Us</a>    
         </li>
     </ul>
 </nav>
