listo version desktop de team

--- a/index.html
+++ b/index.html
@@ -841,7 +841,8 @@
                 </header>
                 <section class="cards">
 
-                    <section class="card uno">
+                    <section class="card">
+                        <img src="imagenes/team-01.jpg"/>
                         <div class="fondoazul"></div>
                         <div class="text">
                                 <h1>Ben Affleck</h1>
@@ -855,7 +856,8 @@
                         </div>
                     </section>
 
-                    <section class="card dos">
+                    <section class="card">
+                        <img src="imagenes/team-02.jpg"/>
                         <div class="fondoazul"></div>
                         <div class="text">
                                 <h1>Christian Bale</h1>
@@ -869,7 +871,8 @@
                         </div>
                     </section>
 
-                    <section class="card tres">
+                    <section class="card">
+                        <img src="imagenes/team-03.jpg"/>
                         <div class="fondoazul"></div>
                         <div class="text">
                                 <h1>Michael Keaton</h1>
@@ -884,6 +887,7 @@
                     </section>
 
                     <section class="card cuatro">
+                        <img src="imagenes/team-04.jpg"/>
                         <div class="fondoazul"></div>
                         <div class="text">
                                 <h1>Adam West</h1>
